Fixed different height of images when the image is stretched

--- a/web/css/layout/listing/_products.less
+++ b/web/css/layout/listing/_products.less
@@ -181,6 +181,7 @@
             }
             .product-item-info {
                 height: 100%; // stick "add to cart" to the bottom
+                width: 100%;
                 flex-direction: column;
                 .lib-css(background, @listing-grid-item__background);
                 .lib-css(border-radius, @listing-grid-item__border-radius);
